<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/kgruenebox"
                android:layout_width="0dp"
                android:layout_height="89dp"
                android:layout_alignParentTop="true"
                android:background="@color/epgreen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="28dp"
                android:gravity="top"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:text="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autoSizeTextType="uniform"/>

            <TextView
                android:id="@+id/kfrage"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="300dp"
                android:autoSizeMaxTextSize="28dp"
                android:autoSizeMinTextSize="23dp"
                android:autoSizeStepGranularity="2dp"
                android:autoSizeTextType="uniform"
                android:text="@string/frage"
                android:textColor="@color/epred"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kgruenebox" />

            <TextView
                android:id="@+id/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="15dp"
                android:autoSizeMaxTextSize="30dp"
                android:autoSizeMinTextSize="20dp"
                android:autoSizeStepGranularity="2dp"
                android:autoSizeTextType="uniform"
                android:text="text"
                android:textColor="@color/epblue"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kfrage" />


            <TextView
                android:id="@+id/kbeispiel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="290dp"
                android:layout_marginBottom="20dp"
                android:autoSizeMaxTextSize="30dp"
                android:autoSizeMinTextSize="20dp"
                android:autoSizeStepGranularity="2dp"
                android:autoSizeTextType="uniform"
                android:text="@string/beispiel"
                android:textColor="@color/epred"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/examples"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/examples"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="15dp"
                android:text="text"
                android:autoSizeMaxTextSize="30dp"
                android:autoSizeMinTextSize="20dp"
                android:autoSizeStepGranularity="2dp"
                android:autoSizeTextType="uniform"
                android:textColor="@color/epblue"
                android:textSize="23sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question" />

            <ImageButton
                android:id="@+id/kvorlesebutton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/eplightgrey"
                app:layout_constraintBottom_toTopOf="@+id/klogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/examples"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/voicerecognition" />

            <ImageButton
                android:id="@+id/kplayerbutton"
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/eplightgrey"
                app:layout_constraintBottom_toTopOf="@+id/klogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.752"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/examples"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@mipmap/player" />

            <ImageView
                android:id="@+id/klogo"
                android:layout_width="175dp"
                android:layout_height="87dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@mipmap/logo_gross" />

            <TextView
                android:id="@+id/kj_rgen_lang"
                android:layout_width="168dp"
                android:layout_height="19dp"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="7dp"
                android:text="@string/j_rgen_langemeyer_2017"
                android:textColor="@color/epblue"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autoSizeTextType="uniform"/>

            <TextView
                android:id="@+id/icfCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="7dp"
                android:textColor="@color/epblue"
                android:textSize="13sp"
                android:text="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autoSizeTextType="uniform"/>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>